# maxxgauge

./: Makefile  User_Setup.h  binaryttf.h  can.cpp  can.h  data.cpp  data.h  esp323.ino  maxxgauge.ino  ota.cpp  ota.h  pyproject.toml  screen.cpp  screen.h  touch.cpp  touch.h
.github/workflows/: build.yml
