[tool.poetry]
name = "maxxgauge"
version = "0.1.0"
description = ""
authors = ["Pablo Buenaposada pablo.buenaposada@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clang-format = "^18.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
